--- a/cjs/index.html
+++ b/cjs/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>Hello world!</h1>
     <h2>Tip: Check your console</h2>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
